# pub2md-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/: glossary_academy.json  glossary_academy_rejected.json  glossary_cs.json  glossary_econ.json  glossary_economist.json  glossary_economist_rejected.json  glossary_pm.json
deploy/: nginx.conf  pub2md.service
docs/: V3_PLAN.md
eval/: manifest.json  metrics.py  run_eval.py
scripts/: audit_glossary.py
src/: cli.py  config.py  styles.py
src/agent/: graph.py  state.py
src/agent/nodes/: article_segmenter.py  domain_glossary_loader.py  en_text_isolator.py  formatter.py  formula_transcriber.py  glossary_updater.py  lang_state_detector.py  noise_stripper.py  opencc_converter.py  output_writer.py  pdf_extractor.py  style_glossary_loader.py  term_candidate_extractor.py  term_researcher.py  term_verifier.py  translator.py
src/prompts/: academy_style.md  economist_style.md
src/tools/: glossary_store.py  llm_json.py  pdf_layout_parser.py  term_rubric.py  web_search_tool.py
tests/: test_formatter.py  test_glossary_store.py  test_layout_parser.py  test_llm_json.py  test_metrics.py  test_special_regions.py  test_term_gating.py
webapp/: manage.py
webapp/accounts/: decorators.py  models.py  tests.py  urls.py  views.py
webapp/accounts/migrations/: 0001_initial.py
webapp/config/: settings.py  urls.py
webapp/jobs/: admin.py  maintenance.py  models.py  tasks.py  tests.py  urls.py  views.py
webapp/static/: app.css  app.js
webapp/templates/: index.html
(+3 files in other folders)
