[project]
name = "pub2md-agent"
version = "0.1.0"
description = "LangGraph agent that converts multi-article PDFs into bilingual (EN + zh-CN) Markdown, one file per article"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-openai>=1.0",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
