[project]
name = "pub2md-agent"
version = "0.1.0"
description = "LangGraph agent that converts multi-article PDFs into bilingual (EN + zh-CN) Markdown, one file per article"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain-openai>=1.0",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "opencc-python-reimplemented>=0.1",
    "django>=5.0",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["tests", "webapp"]
pythonpath = [".", "webapp"]
# Collect Django-convention tests.py alongside pytest-convention test_*.py.
python_files = ["test_*.py", "tests.py"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
